# consciousnessX

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  pyproject.toml  requirements.txt  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: development.yml  production.yml  testing.yml
configs/hpc/: amd_mi355x.yml  cray_lux.yml
docs/: architecture.md  index.md  installation.md  usage.md
docs/theory/: orch_or_explained.md
examples/: consciousness_rl_demo.py  quantum_neural_demo.py  training_pipeline_demo.py
requirements/: base.txt  dev.txt  docs.txt  test.txt
src/: __init__.py  init.py
src/cli/: assess.py  main.py  simulate.py  train.py  visualize.py
src/consciousnessx/: settings.py
src/consciousnessx/api/: dependcies.py  main.py  middleware.py
src/consciousnessx/core/llm/: providers.py
src/consciousnessx/core/memory/: manager.py
src/consciousnessx/core/tools/: registry.py
src/consciousnessx/webui/: main.py
src/core/: iit_integrated_information.py  microtubule_simulator.py  penrose_gravitational_collapse.py  quantum_consciousness_metrics.py  quantum_orch_or.py
src/evaluation/: __init__.py  consciousness_assessment.py  ethical_containment.py  metrics.py  model_comparison.py  performance_tracker.py
src/hardware/: __init__.py
src/hardware/quantum_hardware/: __init__.py  quantum_error_correction.py  superconducting_qubit_sim.py  virtual_quantum_processor.py
src/hardware/virtual_hpc/: __init__.py  amd_mi355x_optimizer.py  cray_lux_simulator.py  discovery_2028_emulator.py  distributed_consciousness.py
src/models/consciousness_rl/: __init__.py  consciousness_value_network.py  integrated_information_maximizer.py  recursive_self_organization.py  self_evolving_consciousness.py
src/models/hybrid_architectures/: __init__.py  global_workspace_theory.py  higher_order_thought.py  quantum_bio_bridge.py
src/models/spiking_neural_networks/: __init__.py  cortical_column_sim.py  orch_or_layer.py  quantum_lif_neuron.py  thalamocortical_loop.py
src/training/: __init__.py  checkpoint.py  consciousness_curriculum.py  curriculum.py  scheduler.py  trainer.py
src/utils/: __init__.py  config_manager.py  data_loader.py  logging_utils.py  random_utils.py
src/virtual_bio/: __init__.py  dna_origami_simulator.py  ion_channel_dynamics.py  synaptic_plasticity.py  tubulin_protein_sim.py  virtual_neuronal_culture.py
src/visualization/: __init__.py  consciousness_dashboard.py  neural_visualizer.py  plotters.py  quantum_visualizer.py
tests/: __init__.py  conftest.py  integration_test.py  test_ion_channels.py  test_microbule_simulator.py  unit_test.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py
tests/unit/core/: test_microtubule_simulator.py  test_penrose_gravitational_collapse.py  test_quantum_orch_or.py
tests/unit/virtual_bio/: test_ion_channel_dynamics.py  test_synaptic_plasticity.py
